# solar_forecast

./: .gitignore  README.md  gru.py  lasso.py  linear_models.py  lstm.py  main.py  n-beats.py  requirements.txt  rnn.py  transform.py  vizualize.ipynb
charts/: vizualize.ipynb
config/: database.py
data/: transform.py
data_handling/: transform.py
data_scraping/: .gitignore  Cargo.toml  docker-compose.yml
data_scraping/src/: lib.rs  logger.rs  main.rs
data_scraping/src/open_meteo/: channel.rs  database.rs  document.rs  historical_data.rs  mod.rs
database/: main.py
feature_selection/: lasso.py  linear_regression.py  lstm.py  rnn.py
files/: production_history.json
models/: main.py
trained_models/: best_ESN_weights_A.pt  best_ESN_weights_B.pt  best_GRU_weights_A.pt  best_GRU_weights_B.pt  best_LSTM_weights_A.pt  best_LSTM_weights_B.pt  best_LSTM_weights_C.pt  best_NBEATS_weights_A.pt  best_NBEATS_weights_B.pt  best_NBEATS_weights_C.pt  best_RNN_weights_A.pt  best_RNN_weights_B.pt  best_RNN_weights_C.pt  gb_A.pkl  gb_B.pkl  lasso_A.pkl  lasso_B.pkl  linear_regression_A.pkl  linear_regression_B.pkl  model.pt
